tests/NormalTests/paczka1/small_fuzzy/83891630.err
Error in line 2: ESz3 A352 14,5
Error in line 4: FZW1O S212 35,5
Error in line 6: FZW1O A352 68,0
